--- a/autorun_for_all_infomonitors_settings.ini
+++ b/autorun_for_all_infomonitors_settings.ini
@@ -1,6 +1,6 @@
 #Author: 31-555
-#2016/07/01
-#v. 0.2
+#2016/07/11
+#v. 0.3
 
 [general]
 #infoscreen_restart_path - путь, где будут лежать exe файлы со скриптами перезапуска инфоскрина
@@ -16,8 +16,17 @@ default_infoscreen_path = \\*-mis\Infodent\IStart.exe a=DentBase s=InfoScreen
 #infoscreen_standard - имя скрипта для перезапуска инфоскринов над стандартными кабинетами
 infoscreen_standard = AutoRestartInfoscreen3_CmdLinePath.exe
 
+#infoscreen_standard_color - цвет фона окна стандартного infoscreen в формате hex - ffffff
+infoscreen_standard_color = FFFFBF
+
 #infoscreen_timetable - имя скрипта для перезапуска инфоскринов с расписанием
 infoscreen_timetable = AutoRestartInfoscreenHoll3_CmdLinePath.exe
+
+#infoscreen_timetable_color - цвет фона окна infoscreen с расписанием в формате hex - ffffff
+infoscreen_timetable_color = C6DFC6;FFFFE7
+
+#desktop_color - цвет фона рабочего стола в формате hex - ffffff
+desktop_color = 80f5ff
 
 #screenshot_tool - имя скрипта для сбора скриншотов с машин
 screenshot_tool = CreateScreenshot.exe
@@ -27,11 +36,11 @@ screenshot_path = \\mscs-fs-01\InfomonitorsScreenshots\
 
 #секция с настройками почтового сервера, в случае ошибок в работе скрипта будет выслано письмо на указанный адрес
 [mail]
-server 		= 
-login 		= 
-password 	= 
+server 		= smtp.budzdorov.ru
+login 		= autorun_for_all_monitors@nnkk.budzdorov.su
+password 	= giodxalf
 #несколько адресов можно указать через ;
-to 			= 
+to 			= nn-admin@nnkk.budzdorov.su
 #если не нужно отправлять письма в случае ошибок, ключ send_email должен иметь значение 0
 send_email 	= 1
 
